k8s/staging/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kli-frontend-ingress
  namespace: kli-staging
  annotations:
    ingress.cilium.io/loadbalancer-mode: "dedicated"
spec:
  ingressClassName: cilium
  rules:
  - host: test.kli.st
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kli-frontend
            port:
              number: 8080
